[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/normal_menu.tres" type="Theme" id=1]
[ext_resource path="res://assets/circle.png" type="Texture" id=2]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -418.5
margin_right = 448.0
margin_bottom = 418.5
theme = ExtResource( 1 )

[node name="VolumeSlider" type="HSlider" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.5
margin_top = 150.0
margin_right = 213.5
margin_bottom = 37.0

[node name="SettingsLabel" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.5
margin_top = 25.0
margin_right = 88.5
margin_bottom = 31.0
text = "Settings"
align = 1

[node name="Sound" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.5
margin_top = 105.0
margin_right = 88.5
margin_bottom = 31.0
text = "Volume"
align = 1

[node name="TextureButton" type="TextureButton" parent="Panel"]
margin_left = 835.0
margin_top = 8.5
margin_right = 1035.0
margin_bottom = 208.5
rect_scale = Vector2( 0.25, 0.25 )
theme = ExtResource( 1 )
texture_normal = ExtResource( 2 )

[node name="VolumeLabel" type="Label" parent="Panel"]
margin_left = 686.0
margin_top = 141.5
margin_right = 726.0
margin_bottom = 169.5
text = "0"
align = 1

[connection signal="value_changed" from="Panel/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_TextureButton_pressed"]
